--- a/POS+Lemm+Stem.ipynb
+++ b/POS+Lemm+Stem.ipynb
@@ -1,13 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### NLTK"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -18,13 +11,15 @@
      "text": [
       "[nltk_data] Downloading package punkt to C:\\Users\\Dmitriy\n",
       "[nltk_data]     Drozhzhin\\AppData\\Roaming\\nltk_data...\n",
-      "[nltk_data]   Unzipping tokenizers\\punkt.zip.\n",
+      "[nltk_data]   Package punkt is already up-to-date!\n",
       "[nltk_data] Downloading package averaged_perceptron_tagger to\n",
       "[nltk_data]     C:\\Users\\Dmitriy\n",
       "[nltk_data]     Drozhzhin\\AppData\\Roaming\\nltk_data...\n",
-      "[nltk_data]   Unzipping taggers\\averaged_perceptron_tagger.zip.\n",
+      "[nltk_data]   Package averaged_perceptron_tagger is already up-to-\n",
+      "[nltk_data]       date!\n",
       "[nltk_data] Downloading package wordnet to C:\\Users\\Dmitriy\n",
-      "[nltk_data]     Drozhzhin\\AppData\\Roaming\\nltk_data...\n"
+      "[nltk_data]     Drozhzhin\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package wordnet is already up-to-date!\n"
      ]
     },
     {
@@ -44,6 +39,25 @@
     "nltk.download('punkt')\n",
     "nltk.download('averaged_perceptron_tagger')\n",
     "nltk.download('wordnet')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('na-dne1902.txt', 'r', encoding='utf-8', errors='ignore') as file: \n",
+    "    text1 = file.read() \n",
+    "with open('chelkash1904.txt', 'r', errors='ignore') as file: \n",
+    "    text2 = file.read() \n",
+    "with open('mat1906.txt', 'r', errors='ignore') as file: \n",
+    "    text3 = file.read() \n",
+    "with open('detstvo1913.txt', 'r', errors='ignore') as file: \n",
+    "    text4 = file.read() \n",
+    "with open('univer1922.txt', 'r', errors='ignore') as file: \n",
+    "    text5 = file.read() \n",
+    "#print(text5)"
    ]
   },
   {
