--- a/classaft.ipynb
+++ b/classaft.ipynb
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -172,12 +172,14 @@
     "from tensorflow.keras.preprocessing.sequence import pad_sequences\n",
     "\n",
     "# Загрузка данных из файла\n",
-    "file_path = \"banks.csv\"\n",
+    "file_path = \"путь_к_вашему_файлу.csv\"\n",
     "data = pd.read_csv(file_path)\n",
+    "texts = data[\"текстовая_колонка\"].tolist()\n",
+    "labels = data[\"метка\"].tolist()\n",
     "\n",
     "# Токенизация текста\n",
     "tokenizer = Tokenizer(num_words=1000, oov_token=\"<OOV>\")\n",
-    "tokenizer.fit_on_texts(data)\n",
+    "tokenizer.fit_on_texts(texts)\n",
     "word_index = tokenizer.word_index\n",
     "\n",
     "# Преобразование текста в последовательности и дополнение их до одной длины\n",
@@ -200,7 +202,7 @@
     "model.fit(padded_sequences, np.array(labels), epochs=10)\n",
     "\n",
     "# Пример предсказания\n",
-    "test_text = [\"banks.csv\"]\n",
+    "test_text = [\"ваш_тестовый_текст\"]\n",
     "test_sequences = tokenizer.texts_to_sequences(test_text)\n",
     "padded_test_sequences = pad_sequences(test_sequences, maxlen=5)\n",
     "prediction = model.predict(padded_test_sequences)\n",
