--- a/pred.ipynb
+++ b/pred.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,41 +15,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "with open('na-dne1902.txt', 'r', encoding='utf-8', errors='ignore') as file: \n",
-    "    text1 = file.read() \n",
+    "    text1 = file.read()\n",
+    "with open('mesh1901.txt', 'r', encoding='utf-8', errors='ignore') as file: \n",
+    "    text2 = file.read()  \n",
     "with open('chelkash1904.txt', 'r', errors='ignore') as file: \n",
-    "    text2 = file.read() \n",
-    "with open('mat1906.txt', 'r', errors='ignore') as file: \n",
     "    text3 = file.read() \n",
-    "with open('detstvo1913.txt', 'r', errors='ignore') as file: \n",
+    "with open('mat1906.txt', 'r', errors='ignore') as file: \n",
     "    text4 = file.read() \n",
+    "with open('detstvo1913.txt', 'r', errors='ignore') as file: \n",
+    "    text5 = file.read() \n",
     "with open('univer1922.txt', 'r', errors='ignore') as file: \n",
-    "    text5 = file.read()"
+    "    text6 = file.read() \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Сходство между текст 1 и текст 2:  0.13773731253366214\n",
-      "Сходство между текст 1 и текст 3:  0.31136013372640203\n",
-      "Сходство между текст 1 и текст 4:  0.2724993324336202\n",
-      "Сходство между текст 1 и текст 5:  0.351786756887134\n",
-      "Сходство между текст 2 и текст 3:  0.341162011900092\n",
-      "Сходство между текст 2 и текст 4:  0.29920598072623983\n",
-      "Сходство между текст 2 и текст 5:  0.3556438173995143\n",
-      "Сходство между текст 3 и текст 4:  0.6430544976968123\n",
-      "Сходство между текст 3 и текст 5:  0.6983609951849521\n",
-      "Сходство между текст 4 и текст 5:  0.6808831614264731\n"
+      "Сходство между текст 1 и текст 2:  0.0\n",
+      "Сходство между текст 1 и текст 3:  0.13773731253366214\n",
+      "Сходство между текст 1 и текст 4:  0.31136013372640203\n",
+      "Сходство между текст 1 и текст 5:  0.2724993324336202\n",
+      "Сходство между текст 1 и текст 6:  0.351786756887134\n",
+      "Сходство между текст 2 и текст 3:  0.0\n"
      ]
     }
    ],
@@ -70,7 +68,7 @@
     "    vectorized_documents = vectorizer.fit_transform([t1, t2])\n",
     "    return cosine_similarity(vectorized_documents[0:1], vectorized_documents[1:2])[0,0]\n",
     "\n",
-    "texts = [text1, text2, text3, text4, text5]  \n",
+    "texts = [text1, text2, text3, text4, text5, text6]  \n",
     "\n",
     "for i in range(len(texts)):\n",
     "    for j in range(i + 1, len(texts)):  \n",
@@ -81,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
