--- a/pred.ipynb
+++ b/pred.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,15 +15,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "with open('na-dne1902.txt', 'r', encoding='utf-8', errors='ignore') as file: \n",
     "    text1 = file.read()\n",
-    "with open('mesh1901.txt', 'r', encoding='utf-8', errors='ignore') as file: \n",
-    "    text2 = file.read()  \n",
     "with open('chelkash1904.txt', 'r', errors='ignore') as file: \n",
+    "    text2 = file.read()  \n",
+    "with open('deti1905.txt', 'r', encoding='utf-8', errors='ignore') as file: \n",
     "    text3 = file.read() \n",
     "with open('mat1906.txt', 'r', errors='ignore') as file: \n",
     "    text4 = file.read() \n",
@@ -35,19 +35,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Сходство между текст 1 и текст 2:  0.0\n",
-      "Сходство между текст 1 и текст 3:  0.13773731253366214\n",
+      "Сходство между текст 1 и текст 2:  0.13773731253366214\n",
+      "Сходство между текст 1 и текст 3:  0.1514723614316846\n",
       "Сходство между текст 1 и текст 4:  0.31136013372640203\n",
       "Сходство между текст 1 и текст 5:  0.2724993324336202\n",
       "Сходство между текст 1 и текст 6:  0.351786756887134\n",
-      "Сходство между текст 2 и текст 3:  0.0\n"
+      "Сходство между текст 2 и текст 3:  0.11042674141688409\n",
+      "Сходство между текст 2 и текст 4:  0.341162011900092\n",
+      "Сходство между текст 2 и текст 5:  0.29920598072623983\n",
+      "Сходство между текст 2 и текст 6:  0.3556438173995143\n",
+      "Сходство между текст 3 и текст 4:  0.2579618013076894\n",
+      "Сходство между текст 3 и текст 5:  0.20443232408579753\n",
+      "Сходство между текст 3 и текст 6:  0.2643453380379951\n",
+      "Сходство между текст 4 и текст 5:  0.6430544976968123\n",
+      "Сходство между текст 4 и текст 6:  0.6983609951849521\n",
+      "Сходство между текст 5 и текст 6:  0.6808831614264731\n"
      ]
     }
    ],
@@ -79,25 +88,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.13773731253366214"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "text_1 = preprocession(text1)\n",
-    "text_2 = preprocession(text2)\n",
+    "# text_1 = preprocession(text1)\n",
+    "# text_2 = preprocession(text2)\n",
     "\n",
-    "cosinus_similar(text_1, text_2)"
+    "# cosinus_similar(text_1, text_2)"
    ]
   }
  ],
