--- a/tt/t_test.ipynb
+++ b/tt/t_test.ipynb
@@ -1141,8 +1141,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$H0$ - помесячная пописка от пользоватлей ultra = помесячная пописке от пользоватлей free \\\n",
-    "$H1$ - помесячная пописка от пользоватлей ultra > помесячная пописке от пользоватлей free"
+    "$H0$ - помесячная подписка от пользоватлей ultra = помесячная подписке от пользоватлей free \\\n",
+    "$H1$ - помесячная подписка от пользоватлей ultra > помесячная подписке от пользоватлей free"
    ]
   },
   {
@@ -1261,8 +1261,8 @@
    "metadata": {},
    "source": [
     "Средняя дистанция поездки \"холодные\" месяца (с октября по март) отличается от \"тёплых\"?\\\n",
-    "$H0$: дистанция поездок в холодные месеца равны дистанции поездок в тёплые месеца \\\n",
-    "$H1$: дистанция поездок в холодные месеца меньше чем дистанция в тёплые "
+    "$H0$: дистанция поездок в холодные месяца равны дистанции поездок в тёплые месяца \\\n",
+    "$H1$: дистанция поездок в холодные месяца меньше чем дистанция в тёплые "
    ]
   },
   {
