--- a/syntax.ipynb
+++ b/syntax.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1254,114 +1254,135 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Подвал\n",
-      "своды\n",
-      "зрителя\n",
-      "занят\n",
-      "стене\n",
-      "печью\n",
-      "акта\n",
-      "своды\n",
-      "зрителя\n",
-      "занят\n",
-      "стене\n",
-      "печью\n",
-      "Везде\n",
-      "пониже\n",
-      "сидит\n",
-      "ног\n",
-      "Посредине\n",
-      "жует\n",
-      "кашляет\n",
-      "примеряет\n",
-      "него\n",
-      "проснулся\n",
-      "возится\n",
-      "Начало\n",
-      "Утро\n",
-      "Барон\n",
-      "Дальше\n",
-      "Квашня\n",
-      "поди\n",
-      "испытала\n",
-      "раков\n",
-      "Бубнов\n",
-      "хрюкаешь\n",
-      "вписалась\n",
-      "подумаю\n",
-      "Клещ\n",
-      "Врешь\n",
-      "Квашня\n",
-      "Чего\n",
-      "Клещ\n",
-      "Врешь\n",
-      "Обвенчаешься\n",
-      "читает\n",
-      "любовь\n",
-      "Хохочет\n",
-      "Настя\n",
-      "отдай\n",
-      "балуй\n",
-      "рыжий\n",
-      "врешь\n",
-      "смеешь\n",
-      "Барон\n",
-      "Дура\n",
-      "Настя\n",
-      "Клещ\n",
-      "Велика\n",
-      "обвенчаешься\n",
-      "Квашня\n",
-      "Конечно\n",
-      "…\n",
-      "как\n",
-      "заездил\n",
-      "Клещ\n",
-      "собака\n",
-      "дело\n",
-      "правды\n",
-      "Барон\n",
-      "Началось\n",
-      "Настька\n",
-      "Настя\n",
-      "А\n",
-      "Уйди\n",
-      "Анна\n",
-      "Начался\n",
-      "кричите\n",
-      "ругайтесь\n",
-      "Клещ\n",
-      "Заныла\n",
-      "Анна\n",
-      "день\n",
-      "Дайте\n",
-      "Бубнов\n",
-      "помеха\n",
-      "Квашня\n",
-      "жила\n",
-      "Анна\n",
-      "отстань\n",
-      "Квашня\n",
-      "Ну\n",
-      "Эх\n",
-      "терпеливица\n",
-      "легче\n",
-      "Барон\n",
-      "Квашня\n",
-      "пора\n",
-      "Квашня\n",
-      "Идем\n",
-      "Анне\n",
-      "Хочешь\n",
-      "Анна\n"
+      "небо\n",
+      "отражается\n",
+      "подавлены\n",
+      "резкие\n",
+      "дышит\n",
+      "голоса\n",
+      "бегают\n",
+      "поработило\n",
+      "свистят\n",
+      "смешны\n",
+      "поэма\n",
+      "подавлял\n",
+      "Раздалось\n",
+      "звучала\n",
+      "превратилась\n",
+      "стали\n",
+      "наступило\n",
+      "появился\n",
+      "бос\n",
+      "видно\n",
+      "торчала\n",
+      "Длинный\n",
+      "вздрагивали\n",
+      "обращал\n",
+      "встал\n",
+      "встал\n",
+      "Ищут\n",
+      "Ищут\n",
+      "ничего\n",
+      "Меня\n",
+      "Пошел\n",
+      "повернул\n",
+      "Эй\n",
+      "изукрасил\n",
+      "испортили\n",
+      "видал\n",
+      "шагал\n",
+      "духе\n",
+      "вывернулся\n",
+      "загородил\n",
+      "Стой\n",
+      "идешь\n",
+      "отступил\n",
+      "пыталось\n",
+      "Сказано\n",
+      "опять\n",
+      "Здравствуй\n",
+      "видались\n",
+      "видать\n",
+      "Иди\n",
+      "пожал\n",
+      "скажи\n",
+      "знаю\n",
+      "Пошел\n",
+      "увидит\n",
+      "свезли\n",
+      "Поди\n",
+      "говоришь\n",
+      "Знаешь\n",
+      "заговаривай\n",
+      "начал\n",
+      "посматривал\n",
+      "наговорюсь\n",
+      "сказывай\n",
+      "здоровы\n",
+      "шути\n",
+      "Я\n",
+      "Зачем\n",
+      "хватит\n",
+      "хватит\n",
+      "слямзил\n",
+      "Смотри\n",
+      "попадись\n",
+      "затрясся\n",
+      "отпустил\n",
+      "двинулся\n",
+      "повеселел\n",
+      "платили\n",
+      "босый\n",
+      "Подошли\n",
+      "ощупали\n",
+      "перешел\n",
+      "выезжала\n",
+      "неслись\n",
+      "изрыгала\n",
+      "чувствовал\n",
+      "улыбался\n",
+      "уверен\n",
+      "Вспомнился\n",
+      "обругался\n",
+      "ночь\n",
+      "посмотрел\n",
+      "сидел\n",
+      "лежала\n",
+      "широкоплеч\n",
+      "оскалил\n",
+      "смигнул\n",
+      "Было\n",
+      "понравился\n",
+      "Косили\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'DET': 1,\n",
+       " 'AUX': 5,\n",
+       " 'CCONJ': 5,\n",
+       " 'NUM': 6,\n",
+       " 'INTJ': 10,\n",
+       " 'PART': 12,\n",
+       " 'ADV': 36,\n",
+       " 'PRON': 38,\n",
+       " 'PROPN': 41,\n",
+       " 'ADJ': 65,\n",
+       " 'NOUN': 91,\n",
+       " 'VERB': 588}"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1375,12 +1396,25 @@
     "            if counter >= 100:\n",
     "                break\n",
     "    if counter >= 100:\n",
-    "        break"
+    "        break\n",
+    "\n",
+    "def count_root_speech_parts():\n",
+    "        res = dict()\n",
+    "        for token in doc:\n",
+    "            if token.pos_ not in (\"SPACE\", \"PUNCT\") and token.dep_ == \"ROOT\": \n",
+    "                if token.pos_ not in res.keys():\n",
+    "                    res[token.pos_] = 1\n",
+    "                else:\n",
+    "                    res[token.pos_] += 1\n",
+    "        root_count = res\n",
+    "        root_count_sorted = dict(sorted(root_count.items(), key=lambda item: item[1]))\n",
+    "        return root_count_sorted\n",
+    "count_root_speech_parts()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -3729,6 +3763,27 @@
       "понравился\n",
       "Косили\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'DET': 1,\n",
+       " 'AUX': 5,\n",
+       " 'CCONJ': 5,\n",
+       " 'NUM': 6,\n",
+       " 'INTJ': 10,\n",
+       " 'PART': 12,\n",
+       " 'ADV': 36,\n",
+       " 'PRON': 38,\n",
+       " 'PROPN': 41,\n",
+       " 'ADJ': 65,\n",
+       " 'NOUN': 91,\n",
+       " 'VERB': 588}"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -3749,12 +3804,14 @@
     "            if counter >= 100:\n",
     "                break\n",
     "    if counter >= 100:\n",
-    "        break"
+    "        break\n",
+    "\n",
+    "count_root_speech_parts()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -4646,6 +4703,30 @@
       "нет\n",
       "прозеваешь\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'ADP': 2,\n",
+       " 'X': 2,\n",
+       " 'AUX': 3,\n",
+       " 'SCONJ': 3,\n",
+       " 'CCONJ': 5,\n",
+       " 'NUM': 13,\n",
+       " 'INTJ': 23,\n",
+       " 'DET': 23,\n",
+       " 'PART': 125,\n",
+       " 'PRON': 231,\n",
+       " 'ADV': 309,\n",
+       " 'ADJ': 567,\n",
+       " 'NOUN': 813,\n",
+       " 'PROPN': 1205,\n",
+       " 'VERB': 1998}"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -4666,12 +4747,14 @@
     "            if counter >= 100:\n",
     "                break\n",
     "    if counter >= 100:\n",
-    "        break"
+    "        break\n",
+    "\n",
+    "count_root_speech_parts()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -6783,6 +6866,29 @@
       "Хоронили\n",
       "плакала\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'SCONJ': 5,\n",
+       " 'X': 6,\n",
+       " 'NUM': 12,\n",
+       " 'INTJ': 14,\n",
+       " 'CCONJ': 15,\n",
+       " 'AUX': 16,\n",
+       " 'DET': 25,\n",
+       " 'PROPN': 98,\n",
+       " 'PART': 144,\n",
+       " 'PRON': 190,\n",
+       " 'ADV': 373,\n",
+       " 'ADJ': 520,\n",
+       " 'NOUN': 715,\n",
+       " 'VERB': 6997}"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -6803,12 +6909,14 @@
     "            if counter >= 100:\n",
     "                break\n",
     "    if counter >= 100:\n",
-    "        break"
+    "        break\n",
+    "\n",
+    "count_root_speech_parts()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -8762,6 +8870,29 @@
       "поднял\n",
       "понимаешь\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'ADP': 1,\n",
+       " 'X': 2,\n",
+       " 'NUM': 5,\n",
+       " 'AUX': 7,\n",
+       " 'INTJ': 7,\n",
+       " 'CCONJ': 10,\n",
+       " 'DET': 11,\n",
+       " 'PROPN': 51,\n",
+       " 'PART': 61,\n",
+       " 'PRON': 88,\n",
+       " 'ADV': 122,\n",
+       " 'ADJ': 274,\n",
+       " 'NOUN': 332,\n",
+       " 'VERB': 2809}"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -8782,12 +8913,14 @@
     "            if counter >= 100:\n",
     "                break\n",
     "    if counter >= 100:\n",
-    "        break"
+    "        break\n",
+    "\n",
+    "count_root_speech_parts()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -11543,6 +11676,29 @@
       "отводило\n",
       "толкала\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'SCONJ': 1,\n",
+       " 'NUM': 2,\n",
+       " 'CCONJ': 3,\n",
+       " 'X': 3,\n",
+       " 'DET': 4,\n",
+       " 'AUX': 6,\n",
+       " 'INTJ': 6,\n",
+       " 'PART': 32,\n",
+       " 'PRON': 44,\n",
+       " 'PROPN': 45,\n",
+       " 'ADV': 127,\n",
+       " 'ADJ': 225,\n",
+       " 'NOUN': 263,\n",
+       " 'VERB': 1945}"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -11563,7 +11719,9 @@
     "            if counter >= 100:\n",
     "                break\n",
     "    if counter >= 100:\n",
-    "        break"
+    "        break\n",
+    "\n",
+    "count_root_speech_parts()"
    ]
   }
  ],
