--- a/chatbot.ipynb
+++ b/chatbot.ipynb
@@ -2,68 +2,180 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "from sklearn.metrics.pairwise import cosine_similarity\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Добрый день, чем могу помочь?\n",
+      "Прекрасно, спасибо!\n",
+      "Отвечаю на ваши вопросы!\n",
+      "Ответами на вопросы.\n",
+      "Я могу чатиться с вами и отвечать на вопросы разной степени серьезности!\n",
+      "Сейчас у меня нет выхода в интернет, непременно задайте мне этот вопрос через годик!\n",
+      "Очень здорово.\n",
+      "Люблю вас 3000 раз!\n",
+      "Хорошего дня!\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = pd.read_csv(\"questions_dataset.csv\")\n",
+    "questions = data[\"questions\"].tolist()\n",
+    "answers = data[\"answers\"].tolist()\n",
+    "\n",
+    "vectorizer = TfidfVectorizer()\n",
+    "X = vectorizer.fit_transform(questions)\n",
+    "\n",
+    "def get_response(input_question):\n",
+    "    input_question = [input_question]\n",
+    "    input_vector = vectorizer.transform(input_question)\n",
+    "    similarities = cosine_similarity(input_vector, X)\n",
+    "    closest = np.argmax(similarities)\n",
+    "    return answers[closest]\n",
+    "\n",
+    "while True:\n",
+    "    user_question = input()\n",
+    "    response = get_response(user_question)\n",
+    "    print(response)\n",
+    "    if user_question == \"Пока\" or user_question == \"Отмена\":\n",
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package stopwords to C:\\Users\\Dmitriy\n",
+      "[nltk_data]     Drozhzhin\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package stopwords is already up-to-date!\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.optim as optim\n",
+    "import nltk\n",
+    "import spacy\n",
+    "import pymorphy2\n",
+    "nltk.download('stopwords')\n",
+    "from nltk.corpus import stopwords"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Добрый день, чем могу помочь?\n",
+      "Отвечаю на ваши вопросы!\n",
       "Прекрасно, спасибо!\n"
      ]
     }
    ],
    "source": [
-    "# Набор данных вопросов и ответов\n",
-    "questions = [\n",
-    "    \"Как дела?\",\n",
-    "    \"Что делаешь?\",\n",
-    "    \"Что нового?\",\n",
-    "    # Добавьте больше вопросов\n",
-    "]\n",
+    "def preprocess_input(user_input):\n",
+    "    nlp = spacy.load(\"ru_core_news_sm\")\n",
+    "    stopwords_ru = stopwords.words('russian')\n",
+    "    morph = pymorphy2.MorphAnalyzer()\n",
     "\n",
-    "answers = [\n",
-    "    \"Прекрасно, спасибо!\",\n",
-    "    \"Я отвечаю на вопросы.\",\n",
-    "    \"Не так много, а у вас?\",\n",
-    "    # Добавьте соответствующие ответы\n",
-    "]\n",
+    "    \n",
+    "    result = [morph.parse(token.text.lower())[0].normal_form for token in nlp(user_input)\n",
+    "               if not token.is_punct and token.text.lower() not in stopwords_ru]\n",
     "\n",
-    "# Создание TF-IDF векторайзера\n",
-    "vectorizer = TfidfVectorizer()\n",
-    "X = vectorizer.fit_transform(questions)\n",
     "\n",
-    "def get_response(input_question):\n",
-    "    # Предобработка входного вопроса\n",
-    "    input_question = [input_question]\n",
+    "    return result\n",
     "\n",
-    "    # Вычисление TF-IDF вектора для входного вопроса\n",
-    "    input_vector = vectorizer.transform(input_question)\n",
+    "def vectorize_input(processed_input):\n",
+    "    from transformers import BertTokenizer, BertForSequenceClassification\n",
+    "    model_name = 'DeepPavlov/rubert-base-cased'\n",
+    "    tokenizer = BertTokenizer.from_pretrained(model_name)\n",
+    "    result = tokenizer.encode_plus(processed_input)['input_ids']\n",
     "\n",
-    "    # Вычисление косинусного сходства между входным вопросом и набором вопросов\n",
-    "    similarities = cosine_similarity(input_vector, X)\n",
+    "    return result\n",
     "\n",
-    "    # Находим самый похожий вопрос\n",
-    "    closest = np.argmax(similarities)\n",
     "\n",
-    "    # Возвращаем соответствующий ответ\n",
-    "    return answers[closest]\n",
+    "def postprocess_output(output_tensor):\n",
+    "    labels = answers[:]\n",
+    "    _, predicted_index = torch.max(output_tensor, dim=1)\n",
+    "    output_label = labels[predicted_index.item()]\n",
+    "    return output_label\n",
     "\n",
-    "# Пример использования\n",
-    "user_question = \"Как дела у тебя?\"\n",
-    "response = get_response(user_question)\n",
-    "print(response)\n"
+    "\n",
+    "class Transformer(nn.Module):\n",
+    "    def __init__(self, input_dim, hidden_dim, output_dim, num_layers, num_heads, dropout):\n",
+    "        super(Transformer, self).__init__()\n",
+    "        self.encoder = nn.TransformerEncoder(\n",
+    "            nn.TransformerEncoderLayer(input_dim, num_heads, hidden_dim, dropout),\n",
+    "            num_layers)\n",
+    "        self.linear = nn.Linear(hidden_dim, output_dim)\n",
+    "        \n",
+    "    def forward(self, x):\n",
+    "        x = self.encoder(x)\n",
+    "        x = self.linear(x)\n",
+    "        return x\n",
+    "\n",
+    "num_epochs = 3\n",
+    "batch_size = 1 \n",
+    "\n",
+    "while True:\n",
+    "    user_input = input()\n",
+    "\n",
+    "    processed_input = preprocess_input(user_input)\n",
+    "    vectorized_input = vectorize_input(processed_input)\n",
+    "\n",
+    "    input_tensor = torch.tensor(vectorized_input).unsqueeze(0)\n",
+    "    from math import ceil\n",
+    "\n",
+    "    input_dim = len(vectorized_input)\n",
+    "    hidden_dim = len(vectorized_input)\n",
+    "    output_dim = len(vectorized_input)\n",
+    "    num_layers = 4 \n",
+    "    num_heads = 1 \n",
+    "    dropout = 0.2 \n",
+    "\n",
+    "    model = Transformer(input_dim, hidden_dim, output_dim, num_layers, num_heads, dropout)\n",
+    "\n",
+    "    criterion = nn.CrossEntropyLoss()\n",
+    "    optimizer = optim.Adam(model.parameters(), lr=0.001)\n",
+    "\n",
+    "    for epoch in range(num_epochs):\n",
+    "        running_loss = 0.0\n",
+    "        \n",
+    "        input_tensor = torch.tensor(vectorized_input, dtype=torch.float).unsqueeze(0)\n",
+    "        output_tensor = model(input_tensor)\n",
+    "        \n",
+    "        optimizer.zero_grad()\n",
+    "        \n",
+    "        output = postprocess_output(output_tensor)\n",
+    "\n",
+    "    print(output)\n",
+    "    if user_input == \"Пока\" or user_input == \"Отмена\":\n",
+    "        break"
    ]
   }
  ],
