--- a/chatbot.ipynb
+++ b/chatbot.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -24,11 +24,10 @@
       "Добрый день, чем могу помочь?\n",
       "Прекрасно, спасибо!\n",
       "Отвечаю на ваши вопросы!\n",
-      "Ответами на вопросы.\n",
-      "Я могу чатиться с вами и отвечать на вопросы разной степени серьезности!\n",
       "Сейчас у меня нет выхода в интернет, непременно задайте мне этот вопрос через годик!\n",
-      "Очень здорово.\n",
+      "Примитивные текстовые команды, не больше одного предложения.\n",
       "Люблю вас 3000 раз!\n",
+      "Браво 6, рубим свет.\n",
       "Хорошего дня!\n"
      ]
     }
@@ -48,17 +47,20 @@
     "    closest = np.argmax(similarities)\n",
     "    return answers[closest]\n",
     "\n",
+    "\n",
+    "\n",
     "while True:\n",
     "    user_question = input()\n",
     "    response = get_response(user_question)\n",
     "    print(response)\n",
     "    if user_question == \"Пока\" or user_question == \"Отмена\":\n",
-    "        break"
+    "        break\n",
+    "# tfidf"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +69,9 @@
      "text": [
       "[nltk_data] Downloading package stopwords to C:\\Users\\Dmitriy\n",
       "[nltk_data]     Drozhzhin\\AppData\\Roaming\\nltk_data...\n",
-      "[nltk_data]   Package stopwords is already up-to-date!\n"
+      "[nltk_data]   Package stopwords is already up-to-date!\n",
+      "c:\\Users\\Dmitriy Drozhzhin\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     }
    ],
@@ -79,7 +83,9 @@
     "import spacy\n",
     "import pymorphy2\n",
     "nltk.download('stopwords')\n",
-    "from nltk.corpus import stopwords"
+    "from nltk.corpus import stopwords\n",
+    "from transformers import BertTokenizer\n",
+    "from transformers import BertForSequenceClassification"
    ]
   },
   {
@@ -175,7 +181,61 @@
     "\n",
     "    print(output)\n",
     "    if user_input == \"Пока\" or user_input == \"Отмена\":\n",
-    "        break"
+    "        break\n",
+    "# transformers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Some weights of BertForSequenceClassification were not initialized from the model checkpoint at DeepPavlov/rubert-base-cased and are newly initialized: ['classifier.bias', 'classifier.weight']\n",
+      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Прекрасно, спасибо!\n",
+      "Прекрасно, спасибо!\n",
+      "Прекрасно, спасибо!\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = pd.read_csv(\"questions_dataset.csv\")\n",
+    "questions = data[\"questions\"].tolist()\n",
+    "answers = data[\"answers\"].tolist()\n",
+    "\n",
+    "vectorizer = TfidfVectorizer()\n",
+    "X = vectorizer.fit_transform(questions)\n",
+    "\n",
+    "tokenizer = BertTokenizer.from_pretrained('DeepPavlov/rubert-base-cased')\n",
+    "model = BertForSequenceClassification.from_pretrained('DeepPavlov/rubert-base-cased')\n",
+    "\n",
+    "def preprocess_input(user_input):\n",
+    "    inputs = tokenizer(user_input, return_tensors=\"pt\")\n",
+    "    return inputs\n",
+    "\n",
+    "def generate_response(input_tensor):\n",
+    "    outputs = model(**input_tensor)\n",
+    "    predicted_label = torch.argmax(outputs.logits, dim=1).item()\n",
+    "    return answers[predicted_label]\n",
+    "\n",
+    "while True:\n",
+    "    user_question = input()\n",
+    "    input_tensor = preprocess_input(user_question)\n",
+    "    response = generate_response(input_tensor)\n",
+    "    print(response)\n",
+    "    if user_question == \"Пока\" or user_question == \"Отмена\":\n",
+    "        break\n",
+    "# hybrid\n"
    ]
   }
  ],
