--- a/chatbot.ipynb
+++ b/chatbot.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -23,10 +23,11 @@
      "text": [
       "Добрый день, чем могу помочь?\n",
       "Прекрасно, спасибо!\n",
-      "Отвечаю на ваши вопросы!\n",
+      "Ничего, в коде очень спокойно и обычно.\n",
       "Сейчас у меня нет выхода в интернет, непременно задайте мне этот вопрос через годик!\n",
+      "Я могу чатиться с вами и отвечать на вопросы разной степени серьезности!\n",
       "Примитивные текстовые команды, не больше одного предложения.\n",
-      "Люблю вас 3000 раз!\n",
+      "Всё отлично, спасибо.\n",
       "Браво 6, рубим свет.\n",
       "Хорошего дня!\n"
      ]
@@ -60,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -90,15 +91,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Dmitriy Drozhzhin\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\torch\\nn\\modules\\transformer.py:282: UserWarning: enable_nested_tensor is True, but self.use_nested_tensor is False because encoder_layer.self_attn.batch_first was not True(use batch_first for better inference performance)\n",
+      "  warnings.warn(f\"enable_nested_tensor is True, but self.use_nested_tensor is False because {why_not_sparsity_fast_path}\")\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Добрый день, чем могу помочь?\n",
-      "Отвечаю на ваши вопросы!\n",
+      "Добрый день, чем могу помочь?\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Dmitriy Drozhzhin\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\torch\\nn\\modules\\transformer.py:282: UserWarning: enable_nested_tensor is True, but self.use_nested_tensor is False because encoder_layer.self_attn.batch_first was not True(use batch_first for better inference performance)\n",
+      "  warnings.warn(f\"enable_nested_tensor is True, but self.use_nested_tensor is False because {why_not_sparsity_fast_path}\")\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Прекрасно, спасибо!\n",
+      "Прекрасно, спасибо!\n",
       "Прекрасно, спасибо!\n"
      ]
     }
@@ -117,7 +141,7 @@
     "    return result\n",
     "\n",
     "def vectorize_input(processed_input):\n",
-    "    from transformers import BertTokenizer, BertForSequenceClassification\n",
+    "    from transformers import BertTokenizer\n",
     "    model_name = 'DeepPavlov/rubert-base-cased'\n",
     "    tokenizer = BertTokenizer.from_pretrained(model_name)\n",
     "    result = tokenizer.encode_plus(processed_input)['input_ids']\n",
@@ -155,7 +179,6 @@
     "    vectorized_input = vectorize_input(processed_input)\n",
     "\n",
     "    input_tensor = torch.tensor(vectorized_input).unsqueeze(0)\n",
-    "    from math import ceil\n",
     "\n",
     "    input_dim = len(vectorized_input)\n",
     "    hidden_dim = len(vectorized_input)\n",
@@ -187,14 +210,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Some weights of BertForSequenceClassification were not initialized from the model checkpoint at DeepPavlov/rubert-base-cased and are newly initialized: ['classifier.bias', 'classifier.weight']\n",
+      "Some weights of BertForSequenceClassification were not initialized from the model checkpoint at DeepPavlov/rubert-base-cased and are newly initialized: ['classifier.weight', 'classifier.bias']\n",
       "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
      ]
     },
@@ -202,9 +225,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Прекрасно, спасибо!\n",
-      "Прекрасно, спасибо!\n",
-      "Прекрасно, спасибо!\n"
+      "Добрый день, чем могу помочь?\n",
+      "Добрый день, чем могу помочь?\n",
+      "Добрый день, чем могу помочь?\n",
+      "Добрый день, чем могу помочь?\n"
      ]
     }
    ],
